--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,8 @@ target-version = ["py310"]
 
 [project.scripts]
 subburn = "subburn.cli:main"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+addopts = "-v --tb=short"
