--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "click>=8.1.7",
     "rich>=13.7.0",
     "openai>=1.6.0",
+    "requests>=2.31.0",  # For downloading images
 ]
 requires-python = ">=3.10"
 
