--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,15 +16,28 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["black>=23.12.1", "mypy>=1.8.0", "ruff>=0.1.9", "pytest>=7.4.4"]
+dev = ["pyright>=1.1.350", "ruff>=0.11.8", "pytest>=8.3.5"]
 
 [tool.ruff]
 line-length = 120
 target-version = "py310"
 
-[tool.black]
-line-length = 120
-target-version = ["py310"]
+[tool.ruff.format]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RUF"]
+unfixable = ["B904", "SIM108"]
+ignore = ["RUF001"]
+
+# Ignore RUF001 warnings about CJK punctuation in utils.py
+[tool.ruff.lint.per-file-ignores]
+"src/subburn/utils.py" = ["RUF001"]
+
+[tool.pyright]
+reportMissingImports = true
+reportMissingTypeStubs = false
+pythonVersion = "3.10"
+typeCheckingMode = "standard"
 
 [project.scripts]
 subburn = "subburn.cli:main"
