feat: migrate from Click to Typer for command-line interface
Replace Click with Typer for improved command-line handling and upgrade dependencies:
- Switch from Click to Typer for CLI framework
- Update dependency versions in pyproject.toml:
  - rich: 13.7.0 → 14.0.0
  - openai: 1.6.0 → 1.78.0
- Update CLI implementation to use Typer's annotated arguments
- Change entry point from main() to app() in the CLI script
- Update tests to use Typer's testing utilities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,10 @@ classifiers = [
     "Topic :: Utilities",
 ]
 dependencies = [
-    "click>=8.1.7",
-    "rich>=13.7.0",
-    "openai>=1.6.0",
-    "requests>=2.31.0",  # For downloading images
+    "typer>=0.15.3",
+    "rich>=14.0.0",
+    "openai>=1.78.0",
+    "requests>=2.31.0", # For downloading images
 ]
 requires-python = ">=3.10"
 
@@ -66,7 +66,7 @@ pythonVersion = "3.10"
 typeCheckingMode = "standard"
 
 [project.scripts]
-subburn = "subburn.cli:main"
+subburn = "subburn.cli:app"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
