--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dependencies = [
     "rich>=14.0.0",
     "openai>=1.78.0",
     "requests>=2.31.0", # For downloading images
+    "pypinyin>=0.54.0",
+    "pydantic>=2.11.4",
+    "jieba>=0.42.1",
 ]
 requires-python = ">=3.10"
 
@@ -72,3 +75,6 @@ subburn = "subburn.cli:app"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 addopts = "-v --tb=short"
+filterwarnings = [
+    "ignore:invalid escape sequence.*:DeprecationWarning",
+]
