--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["pyright>=1.1.350", "ruff>=0.11.8", "pytest>=8.3.5"]
+dev = [
+    "pyright>=1.1.350",
+    "ruff>=0.11.8",
+    "pytest>=8.3.5",
+    "xdg-base-dirs>=6.0.2",
+]
 
 [tool.ruff]
 line-length = 120
